fix font spacing and card

--- a/components/card.module.css
+++ b/components/card.module.css
@@ -1,5 +1,5 @@
 .card{
-    width: 300px;
+    width: fit-content;
     justify-content: center;
     height: auto;
     padding: 5px;
